media query fix the optical align

--- a/app/assets/stylesheets/partials/_landing-page__shelf.scss
+++ b/app/assets/stylesheets/partials/_landing-page__shelf.scss
@@ -12,6 +12,12 @@
     &:not(.shelf--header) {
       top: -1em;
     }
+
+    @media screen and (max-width: $mq-nine-ish) {
+      &:not(.shelf--header) {
+        top: 0;
+      }
+    }
   }
 
 
